# autodate

./: Cargo.toml  LICENSE  README.md  build.rs  resources.rc
src/: app.rs  config.rs  main.rs
src/file/: config.rs  handler.rs  mod.rs  renamer.rs  watcher.rs
src/tray/: constants.rs  item_builder.rs  menu.rs  mod.rs  runner.rs  tray.rs  tray_ref.rs  types.rs
