[package]
name = "invoices-name"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
notify = "8.2.0"
env_logger = "0.11.3"
log = "0.4.21"
chrono = "0.4.38"
tray-icon = "0.21.1"
winit = "0.30.12"
open = "5.3"

[build-dependencies]
embed-resource = "2.3"

[profile.dev.package.metadata.win]
subsystem = "console"

[profile.release.package.metadata.win]
subsystem = "windows"
