[package]
name = "autodate"
version = "0.1.2"
edition = "2024"

[dependencies]
notify = "8.2.0"
env_logger = "0.11.3"
log = "0.4.21"
chrono = "0.4.38"
tray-icon = "0.21.1"
winit = "0.30.12"
open = "5.3"
thiserror = "2.0.17"
dotenvy = "0.15.7"
envy = "0.4.2"
serde = { version = "1.0.228", features = ["derive"] }

[build-dependencies]
embed-resource = "2.3"

[profile.dev.package.metadata.win]
subsystem = "console"

[profile.release.package.metadata.win]
subsystem = "windows"
